fix(design): center-align tabs

--- a/resources/less/system/_tabs.less
+++ b/resources/less/system/_tabs.less
@@ -1,6 +1,7 @@
 .tabs {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   margin: 0 calc(-1 * var(--space-xs));
 }
 
